--- a/code/backend/src/main/resources/application.properties
+++ b/code/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8000
 # DataBase Setting
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://i9d204.p.ssafy.io/ourola?useUniCode=yes&characterEncoding=UTF-8
-spring.datasource.hikari.username=ssafy
-spring.datasource.hikari.password=ssafy
+spring.datasource.url=jdbc:mysql://localhost:3306/ourola?useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.hikari.username=root
+spring.datasource.hikari.password=
 # JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database=mysql
@@ -25,7 +25,7 @@ jwt.refresh.header=Authorization-refresh
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 #??(???)
-#spring.servlet.multipart.location=C:\\SSAFY\\file
+#spring.servlet.multipart.location=C:\\ourola\\file
 #EC2(???)
 spring.servlet.multipart.location=/app/file
 file.Feed=/feedFile/
@@ -36,19 +36,19 @@ file.shopMainFile=/shopMainFile/
 file.openLiveFile=/openLiveFile/
 #Openvidu
 server.ssl.enabled:false
-OPENVIDU_URL:https://i9d204.p.ssafy.io:8003/
+OPENVIDU_URL:https://localhost:8003/
 OPENVIDU_SECRET:MY_SECRET
 #email
 #email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=sendingemail204@gmail.com
-spring.mail.password=dzqmwcpoosxferox
+spring.mail.password=
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
 spring.profiles.group."local"="local, jwt, oauth"
 spring.profiles.active=local
 spring.profiles.include=oauth
 #Redis
-spring.redis.host=i9d204.p.ssafy.io
+spring.redis.host=localhost
 spring.redis.port=6379
